[package]
name = "api-key-server"
version = "0.1.0"
authors = ["Salvador Guzman <guzmansalv@gmail.com>"]
edition = "2018"


[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
rand = "0.6.5"
actix-web = "0.7.19"
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
