[package]
name = "api-key-server"
version = "0.1.0"
authors = ["Salvador Guzman <guzmansalv@gmail.com>"]
edition = "2018"


[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix-web = "0.7.19"
lazy_static = "1.3.0"
openssl-sys = "*"
rand = "0.6.5"
reqwest = "0.9.17"
serde = "1.0.91"
serde_json = "1.0.39"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
